--- a/modules/logging-create-loki-cr-cli.adoc
+++ b/modules/logging-create-loki-cr-cli.adoc
@@ -32,8 +32,8 @@ spec:
   size: 1x.small # <1>
   storage:
     schemas:
-    - version: v12
-      effectiveDate: "2022-06-01"
+    - version: v13
+      effectiveDate: "2024-04-02"
     secret:
       name: logging-loki-s3 # <2>
       type: s3 # <3>
@@ -67,7 +67,7 @@ spec:
   size: 1x.small # <2>
   storage:
     schemas:
-      - effectiveDate: '2023-10-15'
+      - effectiveDate: "2024-04-02"
         version: v13
     secret:
       name: logging-loki-s3 # <3>
