--- a/modules/logging-create-loki-cr-console.adoc
+++ b/modules/logging-create-loki-cr-console.adoc
@@ -34,8 +34,8 @@ spec:
   size: 1x.small # <2>
   storage:
     schemas:
-    - version: v12
-      effectiveDate: '2022-06-01'
+    - version: v13
+      effectiveDate: "2024-04-02"
     secret:
       name: logging-loki-s3 # <3>
       type: s3 # <4>
@@ -64,8 +64,8 @@ spec:
   size: 1x.small # <2>
   storage:
     schemas:
-      - effectiveDate: '2023-10-15'
-        version: v13
+      - effectiveDate: "2024-04-02"
+        version: v14
     secret:
       name: logging-loki-s3 # <3>
       type: s3 # <4>
