--- a/modules/network-observability-lokistack-create.adoc
+++ b/modules/network-observability-lokistack-create.adoc
@@ -27,8 +27,8 @@ spec:
   size: 1x.small # <2>
   storage:
     schemas:
-    - version: v12
-      effectiveDate: '2022-06-01'
+    - version: v13
+      effectiveDate: "2024-04-02"
     secret:
       name: loki-s3
       type: s3
